Closed Bug 1786799 Opened 2 years ago Closed 2 years ago

VAAPI broken av_hwdevice_ctx_alloc failed

Categories

(Core :: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 --- fixed

People

(Reporter: kubrick, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

On Linux 5.19, intel, gnome 43 beta

[RDD 656792: MediaPDecoder #1]: D/PlatformDecoderModule FFVPX: Initialising VA-API FFmpeg decoder
[RDD 656792: MediaPDecoder #1]: D/PlatformDecoderModule FFVPX: codec vp9 : Google VP9
[RDD 656792: MediaPDecoder #1]: D/PlatformDecoderModule FFVPX: av_hwdevice_ctx_alloc failed.
[RDD 656792: MediaPDecoder #1]: D/PlatformDecoderModule FFVPX: Failed to create VA-API device context

====

mozregression --pref gfx.webrender.enabled:true --pref media.ffmpeg.vaapi.enabled:true
narrowed down to this pushlog
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=cea41aad444f0edd16cd7b9823bc22c2b9bc252c&tochange=1d959fb3ed39b8aeffd77cd00565707f1458889a

Regressed by: 1765480
Assignee: nobody → padenot

Set release status flags based on info from the regressing bug 1765480

The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/72741c64ce30 Include Linux desktop config override in config_components.h as well as config.h in ffvpx. r=alwu
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: