Bug 1786799 - Include Linux desktop config override in config_components.h as well as config.h in ffvpx. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D155476