media/ffvpx/config.h
@@ -59,5 +59,7 @@
 #    endif
 #  endif
 #endif  // else MOZ_FFVPX_AUDIOONLY
+        //
+#include "config_override.h"
 
 #endif  // MOZ_FFVPX_CONFIG_H
